log
Fri May 13 03:00:07 UTC 2022: 
 tests:  0|5
total_score: 0/70
0ae7e84
Mon May 16 00:45:34 UTC 2022: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:11: error: expected expression before ‘Node’
           Node * aux = createNode();
           ^~~~
sudoku.c:58:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
         if(n->sudo[i][j] == 0)
         ^~
sudoku.c:60:11: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           aux = copy(n);
           ^~~
sudoku.c:60:11: error: ‘aux’ undeclared (first use in this function)
sudoku.c:60:11: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
bc1a303
Mon May 16 00:46:49 UTC 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:15: error: ‘k’ undeclared (first use in this function)
           for(k = 0; k < 9; k++){
               ^
sudoku.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
209a908
Mon May 16 00:46:57 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
91a6a23
Mon May 16 02:10:59 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:61:5: error: statement with no effect [-Werror=unused-value]
     aux
     ^~~
sudoku.c:62:3: error: expected ‘;’ before ‘}’ token
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
2b33284
Mon May 16 02:12:45 UTC 2022: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:51:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
sudoku.c:51:11: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
           ^
cc1: all warnings being treated as errors
Compilation failed
f75f2e6
Mon May 16 02:13:09 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:51:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
sudoku.c:51:11: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
           ^
cc1: all warnings being treated as errors
Compilation failed
e5df362
Mon May 16 02:13:52 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:52:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
2f6ff43
Mon May 16 02:14:00 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:52:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
ee1d8d5
Mon May 16 02:14:09 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:52:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
a4a3e88
Mon May 16 02:16:43 UTC 2022: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:52:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
662222a
Mon May 16 02:17:19 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:52:22: error: ‘i’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
f5f25fb
Mon May 16 02:19:22 UTC 2022: 
 sudoku.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:52:22: error: ‘i’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
89bc0f2
Mon May 16 02:19:56 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:52:22: error: ‘i’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
b583c9a
Mon May 16 02:20:21 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:52:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
1604527
Mon May 16 02:22:24 UTC 2022: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
d92ea7e
Mon May 16 02:39:16 UTC 2022: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_final’:
sudoku.c:108:5: error: expected ‘;’ before ‘}’ token
     }
     ^
Compilation failed
dc12150
Mon May 16 02:39:21 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
ccb0387
Mon May 16 02:39:26 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
223d7f1
Mon May 16 03:04:08 UTC 2022: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:121:10: error: implicit declaration of function ‘es_final’; did you mean ‘is_final’? [-Werror=implicit-function-declaration]
       if(es_final(nodo)) return nodo;
          ^~~~~~~~
          is_final
sudoku.c:123:14: error: unused variable ‘aux’ [-Werror=unused-variable]
       Node * aux = first(adj);
              ^~~
cc1: all warnings being treated as errors
Compilation failed
e817c24
Mon May 16 03:05:22 UTC 2022: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:121:10: error: implicit declaration of function ‘es_final’; did you mean ‘is_final’? [-Werror=implicit-function-declaration]
       if(es_final(nodo)) return nodo;
          ^~~~~~~~
          is_final
cc1: all warnings being treated as errors
Compilation failed
380a145
Mon May 16 03:05:32 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
48abb1b
Mon May 16 03:08:18 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:131:9: error: ‘aux’ undeclared (first use in this function)
   free (aux);
         ^~~
sudoku.c:131:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3bb92d9
Mon May 16 03:12:01 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:132:9: error: ‘aux’ undeclared (first use in this function)
   free (aux);
         ^~~
sudoku.c:132:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2de8df4
